--- a/code/confs/dfaust.conf
+++ b/code/confs/dfaust.conf
@@ -1,4 +1,3 @@
-
 train{
     plot_frequency = 10
     preprocess = True
@@ -34,31 +33,31 @@ plot{
     save_ply = True
     overwrite=True
 }
+
 network{
     decode_mnfld_pnts = False
 
     encoder{
-
     }
+
     decoder
     {
-        dims = [ 512, 512, 512, 512, 512, 512, 512, 512 ],
-        dropout = []
+        layer_dims = [512, 512, 512, 512, 512, 512, 512, 512],
+        dropout_layers = []
         dropout_prob =  0.2
-        norm_layers = [0, 1, 2, 3, 4, 5, 6, 7]
-        latent_in = [4]
-        xyz_in_all = False
+        normalized_layers = [0, 1, 2, 3, 4, 5, 6, 7]
+        latent_input_layers = [4]
+        use_weight_norm = True
+        use_xyz_in_all = False
         activation = None
-
-        latent_dropout = False
-        weight_norm = True
+        use_latent_dropout = False
     }
 
     loss{
         loss_type = model.loss.SALLoss
         properties{
             manifold_pnts_weight = 0
-            unsigned=True
-            }
+            unsigned = True
+        }
     }
 }
